--- a/src/styles.css
+++ b/src/styles.css
@@ -94,13 +94,13 @@
 
     --dui-spacing-super-small: 0.14rem;
     --dui-spacing-extra-small: 0.26rem;
-    --dui-spacing-small: 0.43rem;
-    --dui-spacing-medium: 0.71rem;
-    --dui-spacing-large: 1.13rem;
-    --dui-spacing-extra-large: 2.17rem;
-    --dui-spacing-super-large: 3.47rem;
-    --dui-spacing-mega-large: 4.91rem;
-    --dui-spacing-ultra-large: 6.19rem;
+    --dui-spacing-small: 0.41rem;
+    --dui-spacing-medium: 0.79rem;
+    --dui-spacing-large: 1.17rem;
+    --dui-spacing-extra-large: 1.83rem;
+    --dui-spacing-super-large: 3.01rem;
+    --dui-spacing-mega-large: 4.81rem;
+    --dui-spacing-ultra-large: 6.89rem;
 
     --dui-font-size-super-small: 0.5rem;
     --dui-font-size-extra-small: 0.63rem;
